Bug 692520 - Handle the case where the frame might going away while retrieving selection properties from a text control; r=bzbarsky